[gd_scene load_steps=4 format=3 uid="uid://dfixw0merhgge"]

[ext_resource type="Texture2D" uid="uid://bldtba5w4l5db" path="res://Assets/Textures/card_template.png" id="1_0qqmn"]
[ext_resource type="Script" uid="uid://djqe6niv4w71f" path="res://Scripts/card.gd" id="1_wf8id"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wf8id"]
size = Vector2(32, 48)

[node name="Card" type="Control" groups=["Card"]]
custom_minimum_size = Vector2(32, 48)
layout_mode = 3
anchors_preset = 0
offset_right = 36.0
offset_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_wf8id")

[node name="BaseCardSprite" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 32.0
offset_bottom = 48.0
texture = ExtResource("1_0qqmn")

[node name="CostLabel" type="Label" parent="BaseCardSprite"]
layout_mode = 0
offset_left = 9.0
offset_top = -21.0
offset_right = 49.0
offset_bottom = 2.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="DescriptionLabel" type="Label" parent="BaseCardSprite"]
layout_mode = 0
offset_left = 5.0
offset_top = 35.0
offset_right = 83.0
offset_bottom = 58.0
scale = Vector2(0.28, 0.28)
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(16, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wf8id")

[connection signal="mouse_entered" from="Area2D" to="." method="mouse_entered_card_area"]
[connection signal="mouse_exited" from="Area2D" to="." method="mouse_exited_card_area"]
